unpackaged/main/default/objects/Funder__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Only active Funders are retuned on the Find Banks wizard results</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>