unpackaged/main/default/objects/Funder__c/fields/ADB__c.field-meta.xml
<CustomField>
    <fullName>ADB__c</fullName>
    <label>ADB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>