unpackaged/main/default/objects/Funder__c/fields/Additional_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_1__c</fullName>
    <label>Additional Email 1</label>
    <type>Email</type>
</CustomField>