unpackaged/main/default/objects/Funder__c/fields/Additional_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_2__c</fullName>
    <label>Additional Email 2</label>
    <type>Email</type>
</CustomField>