unpackaged/main/default/objects/Funder__c/fields/Approval_Speed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Speed__c</fullName>
    <label>Approval Speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Fast</fullName>
            </value>
            <value>
                <fullName>2. Average</fullName>
            </value>
            <value>
                <fullName>3. Slow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>