unpackaged/main/default/objects/Funder__c/fields/Approval_Time_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Approval_Time_In_Hours__c</fullName>
    <description>Average time in hours, which takes for the lender to approve the submissions. Updated by a daily batch operation.</description>
    <label>Approval Time In Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>