unpackaged/main/default/objects/Funder__c/fields/Batch_Count__c.field-meta.xml
<CustomField>
    <fullName>Batch_Count__c</fullName>
    <label>Batch Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>