unpackaged/main/default/objects/Funder__c/fields/BK_Policy__c.field-meta.xml
<CustomField>
    <fullName>BK_Policy__c</fullName>
    <label>BK Policy</label>
    <length>250</length>
    <type>Text</type>
</CustomField>