unpackaged/main/default/objects/Funder__c/fields/Cashio_ID__c.field-meta.xml
<CustomField>
    <fullName>Cashio_ID__c</fullName>
    <externalId>true</externalId>
    <label>Cashio ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>