unpackaged/main/default/objects/Funder__c/fields/Closing_Cost_Policy__c.field-meta.xml
<CustomField>
    <fullName>Closing_Cost_Policy__c</fullName>
    <label>Closing Cost Policy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>