unpackaged/main/default/objects/Funder__c/fields/Commision__c.field-meta.xml
<CustomField>
    <fullName>Commision__c</fullName>
    <label>Commision</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>