unpackaged/main/default/objects/Funder__c/fields/Commission_Payment_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Commission_Payment_Timeframe__c</fullName>
    <label>Commission Payment Timeframe</label>
    <length>250</length>
    <type>Text</type>
</CustomField>