unpackaged/main/default/objects/Funder__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. On Payback</fullName>
            </value>
            <value>
                <fullName>2. On Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>