unpackaged/main/default/objects/Funder__c/fields/Commissions__c.field-meta.xml
<CustomField>
    <fullName>Commissions__c</fullName>
    <label>Commissions</label>
    <length>250</length>
    <type>Text</type>
</CustomField>