unpackaged/main/default/objects/Funder__c/fields/Commissions_on_renewals__c.field-meta.xml
<CustomField>
    <fullName>Commissions_on_renewals__c</fullName>
    <label>Commissions on renewals</label>
    <length>250</length>
    <type>Text</type>
</CustomField>