unpackaged/main/default/objects/Funder__c/fields/Docs__c.field-meta.xml
<CustomField>
    <fullName>Docs__c</fullName>
    <label>Docs</label>
    <length>250</length>
    <type>Text</type>
</CustomField>