unpackaged/main/default/objects/Funder__c/fields/Factor__c.field-meta.xml
<CustomField>
    <fullName>Factor__c</fullName>
    <label>Factor Rate 6 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>