unpackaged/main/default/objects/Funder__c/fields/Factor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Factor_Rate__c</fullName>
    <label>Factor Rate 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>