unpackaged/main/default/objects/Funder__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <label>Fees</label>
    <length>250</length>
    <type>Text</type>
</CustomField>