unpackaged/main/default/objects/Funder__c/fields/Funder_Label__c.field-meta.xml
<CustomField>
    <fullName>Funder_Label__c</fullName>
    <label>Funder Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Knight Capital Funding</fullName>
            </value>
            <value>
                <fullName>JP Fox</fullName>
            </value>
            <value>
                <fullName>Yellowstone</fullName>
            </value>
            <value>
                <fullName>Snap Advances</fullName>
            </value>
            <value>
                <fullName>EBF North</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>