unpackaged/main/default/objects/Funder__c/fields/Funder_Login_Notes__c.field-meta.xml
<CustomField>
    <fullName>Funder_Login_Notes__c</fullName>
    <label>Funder Login Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>