unpackaged/main/default/objects/Funder__c/fields/Funder_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Funder_Login_URL__c</fullName>
    <label>Funder Login URL</label>
    <type>Url</type>
</CustomField>