unpackaged/main/default/objects/Funder__c/fields/Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>Funder_Name__c</fullName>
    <label>Funder Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>