unpackaged/main/default/objects/Funder__c/fields/IdInCapRise__c.field-meta.xml
<CustomField>
    <fullName>IdInCapRise__c</fullName>
    <externalId>true</externalId>
    <label>IdInCapRise</label>
    <length>40</length>
    <type>Text</type>
</CustomField>