unpackaged/main/default/objects/Funder__c/fields/Login_to_Bank_Required__c.field-meta.xml
<CustomField>
    <fullName>Login_to_Bank_Required__c</fullName>
    <label>Login to Bank Required</label>
    <length>250</length>
    <type>Text</type>
</CustomField>