unpackaged/main/default/objects/Funder__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>IF(NOT(ISBLANK(Logo_URL__c)),
IMAGE(Logo_URL__c, "Logo")
, "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>