unpackaged/main/default/objects/Funder__c/fields/Longest_Term__c.field-meta.xml
<CustomField>
    <fullName>Longest_Term__c</fullName>
    <description>The longest term (months) the lender can give the loan.</description>
    <label>Longest Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>