unpackaged/main/default/objects/Funder__c/fields/Lowest_Buy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Buy_Rate__c</fullName>
    <description>This is the lowest buy rate a lender will offer</description>
    <label>Lowest Buy Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>