unpackaged/main/default/objects/Funder__c/fields/Max_Holdback__c.field-meta.xml
<CustomField>
    <fullName>Max_Holdback__c</fullName>
    <label>Max Holdback</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>