unpackaged/main/default/objects/Funder__c/fields/Max_Neg_Days_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Max_Neg_Days_Last_Month__c</fullName>
    <label>Max Neg Days Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>