unpackaged/main/default/objects/Funder__c/fields/Merchant_App_URL__c.field-meta.xml
<CustomField>
    <fullName>Merchant_App_URL__c</fullName>
    <label>Merchant App URL</label>
    <type>Url</type>
</CustomField>