unpackaged/main/default/objects/Funder__c/fields/Merchant_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Instructions__c</fullName>
    <label>Merchant Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>