unpackaged/main/default/objects/Funder__c/fields/Methods_of_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Methods_of_Repayment__c</fullName>
    <label>Methods of Repayment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>