unpackaged/main/default/objects/Funder__c/fields/Minimum_Advance__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Advance__c</fullName>
    <label>Minimum Advance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>