unpackaged/main/default/objects/Funder__c/fields/Minimum_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Annual_Revenue__c</fullName>
    <label>Minimum Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>