unpackaged/main/default/objects/Funder__c/fields/Minimum_Avg_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Avg_Daily_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minimum  Avg. Daily Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>