unpackaged/main/default/objects/Funder__c/fields/Minimum_Deposit_Count__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Deposit_Count__c</fullName>
    <label>Minimum Deposit Count</label>
    <length>250</length>
    <type>Text</type>
</CustomField>