unpackaged/main/default/objects/Funder__c/fields/Number_Of_Max_Positions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Max_Positions__c</fullName>
    <description>A formula field to convert the Positions field value to a number. If the Positions field value is "Unlimited" this field value will be -1.</description>
    <formula>CASE(
  Positions__c,
  'Unlimited', -1,
  'Up to 1', 1,
  'Up to 2', 2,
  'Up to 3', 3,
  'Up to 4', 4,
  'Up to 5', 5,
  'Up to 6', 6,
  'Up to 7', 7,
  -1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Max Positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>