unpackaged/main/default/objects/Funder__c/fields/Ownership_Percentage_Requirment__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage_Requirment__c</fullName>
    <label>Ownership Percentage Requirment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>