unpackaged/main/default/objects/Funder__c/fields/Paperwork_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Requirement__c</fullName>
    <label>Paperwork Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Minimal</fullName>
            </value>
            <value>
                <fullName>2. Average</fullName>
            </value>
            <value>
                <fullName>3. High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>