unpackaged/main/default/objects/Funder__c/fields/PCT_From_Approved_To_Funded__c.field-meta.xml
<CustomField>
    <fullName>PCT_From_Approved_To_Funded__c</fullName>
    <description>The percentage of "approved" submissions that reached to "funded." A daily schedule job updates it.</description>
    <label>% from "Approved"  to "Funded"</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>