unpackaged/main/default/objects/Funder__c/fields/Percentage_Net_After_Payoff__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Net_After_Payoff__c</fullName>
    <label>Percentage Net After Payoff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>