unpackaged/main/default/objects/Funder__c/fields/Portal_Lender_None_API__c.field-meta.xml
<CustomField>
    <fullName>Portal_Lender_None_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Lender (None API)</label>
    <type>Checkbox</type>
</CustomField>