unpackaged/main/default/objects/Funder__c/fields/Positions__c.field-meta.xml
<CustomField>
    <fullName>Positions__c</fullName>
    <label>Positions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Up to 1</fullName>
            </value>
            <value>
                <fullName>Up to 2</fullName>
            </value>
            <value>
                <fullName>Up to 3</fullName>
            </value>
            <value>
                <fullName>Up to 4</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>