unpackaged/main/default/objects/Funder__c/fields/PW__c.field-meta.xml
<CustomField>
    <fullName>PW__c</fullName>
    <label>PW</label>
    <length>50</length>
    <type>Text</type>
</CustomField>