unpackaged/main/default/objects/Funder__c/fields/Requires_Manual_Input__c.field-meta.xml
<CustomField>
    <fullName>Requires_Manual_Input__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Manual Input</label>
    <type>Checkbox</type>
</CustomField>