unpackaged/main/default/objects/Funder__c/fields/Restricted_Industries__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Industries__c</fullName>
    <label>Restricted Industries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Services</fullName>
            </value>
            <value>
                <fullName>Adult Related</fullName>
            </value>
            <value>
                <fullName>Advertising &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Advice of Sporting Events</fullName>
            </value>
            <value>
                <fullName>Agency-type business</fullName>
            </value>
            <value>
                <fullName>Agriculture / Farming</fullName>
            </value>
            <value>
                <fullName>Air Conditioning and Heating</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>All churches except SIC</fullName>
            </value>
            <value>
                <fullName>Ambulance Service</fullName>
            </value>
            <value>
                <fullName>Amusement Center</fullName>
            </value>
            <value>
                <fullName>Apparel &amp; Electronics Wholesale</fullName>
            </value>
            <value>
                <fullName>Appliance Repair</fullName>
            </value>
            <value>
                <fullName>Attorneys</fullName>
            </value>
            <value>
                <fullName>ATV Sales</fullName>
            </value>
            <value>
                <fullName>Auction House/Flea Markets</fullName>
            </value>
            <value>
                <fullName>Audio Video Rental &amp; Sales</fullName>
            </value>
            <value>
                <fullName>Auto Auctions</fullName>
            </value>
            <value>
                <fullName>Auto Audio &amp; Detail</fullName>
            </value>
            <value>
                <fullName>Auto Dealer New/Used - No Repairs</fullName>
            </value>
            <value>
                <fullName>Auto Dealer Used/New + Auto Repair</fullName>
            </value>
            <value>
                <fullName>Automotive Auctioneers</fullName>
            </value>
            <value>
                <fullName>Auto Parts &amp; Hardware</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Bail Bonds</fullName>
            </value>
            <value>
                <fullName>Bankrupt or Declining Franchises</fullName>
            </value>
            <value>
                <fullName>Behavioral/Mental Health Center</fullName>
            </value>
            <value>
                <fullName>Boat &amp; RV Storage</fullName>
            </value>
            <value>
                <fullName>Boat Service Dealership</fullName>
            </value>
            <value>
                <fullName>Bowling Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>