unpackaged/main/default/objects/Funder__c/fields/Site_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Site_Inspection__c</fullName>
    <label>Site Inspection</label>
    <length>250</length>
    <type>Text</type>
</CustomField>