unpackaged/main/default/objects/Funder__c/fields/Stips__c.field-meta.xml
<CustomField>
    <fullName>Stips__c</fullName>
    <label>Stips</label>
    <length>250</length>
    <type>Text</type>
</CustomField>