unpackaged/main/default/objects/Funder__c/fields/Submission_Email_One__c.field-meta.xml
<CustomField>
    <fullName>Submission_Email_One__c</fullName>
    <description>This is the email that actually receives the submissions</description>
    <inlineHelpText>This is the email that actually receives the submissions</inlineHelpText>
    <label>Submission Email One</label>
    <type>Email</type>
</CustomField>