unpackaged/main/default/objects/Funder__c/fields/Submission_Email_Two__c.field-meta.xml
<CustomField>
    <fullName>Submission_Email_Two__c</fullName>
    <description>This is the second email that is CC'd</description>
    <inlineHelpText>This is the second email that is CC'd</inlineHelpText>
    <label>Submission Email Two</label>
    <type>Email</type>
</CustomField>