unpackaged/main/default/objects/Funder__c/fields/Submit_Using_API__c.field-meta.xml
<CustomField>
    <fullName>Submit_Using_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Using API</label>
    <type>Checkbox</type>
</CustomField>