unpackaged/main/default/objects/Funder__c/fields/Tax_Lean_Policy__c.field-meta.xml
<CustomField>
    <fullName>Tax_Lean_Policy__c</fullName>
    <label>Tax Lean Policy</label>
    <length>250</length>
    <type>Text</type>
</CustomField>