unpackaged/main/default/objects/Funder__c/fields/Time_in_business__c.field-meta.xml
<CustomField>
    <fullName>Time_in_business__c</fullName>
    <label>Time in business (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>