unpackaged/main/default/objects/Funder__c/fields/Trade_Refs__c.field-meta.xml
<CustomField>
    <fullName>Trade_Refs__c</fullName>
    <label>Trade Refs</label>
    <length>250</length>
    <type>Text</type>
</CustomField>