unpackaged/main/default/objects/Funder__c/fields/Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Count__c</fullName>
    <label>Transaction Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>