unpackaged/main/default/objects/Funder__c/fields/Updated_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Updated_Guidelines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Let's you know if the guidelines have been updated</description>
    <label>Updated Guidelines</label>
    <type>Checkbox</type>
</CustomField>