unpackaged/main/default/objects/Funder__c/fields/URL_Portal_Login__c.field-meta.xml
<CustomField>
    <fullName>URL_Portal_Login__c</fullName>
    <description>This is the portal login URL</description>
    <inlineHelpText>This is the portal login URL</inlineHelpText>
    <label>URL Portal Login</label>
    <type>Url</type>
</CustomField>