unpackaged/main/default/objects/Funder__c/listViews/Active_Lenders.listView-meta.xml
<ListView>
    <fullName>Active_Lenders</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Updated_Guidelines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Lenders</label>
</ListView>